--- a/NoirEtBlanc/about.html
+++ b/NoirEtBlanc/about.html
@@ -5,45 +5,42 @@
         <title>Le monde en noir &amp; blanc</title>
         <link rel="stylesheet" href="/css/normalize.css" />
     </head>
-
     <body>
         <header id="mainHeader">
-            <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
+            <img src="/images/layout/nb_logo.svg" alt="Logo N&B" id="logoImg" />
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
-                <h1 class="accessibility">Menu principal</h1>
-                <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
+                <h1>Menu principal</h1>
+                <p><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
                 <ul>
                     <li><a href="index.html" title="Vers la page d'accueil du site 'Le monde en noir et blanc'">Accueil</a></li>
                     <li><a href="galleries.html" title="Vers les galeries photo de ce site">Galeries</a></li>
                     <li><a href="contact.html" title="Vers la page de contact de ce site">Contact</a></li>
-                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">&Agrave; propos</a></li>
+                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">À propos</a></li>
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
-        </header><!-- mainHeader end -->
-
+            <button id="menuToggle"><img src="/images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu" /></button>
+        </header><!--Ici se termine le #mainHeader-->
         <section id="pageContent">
             <main>
                 <h1>Lorem ipsum dolor sit.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem asperiores non fuga delectus omnis error excepturi suscipit id temporibus neque, a officiis, praesentium laborum ex vel ut eius magnam voluptatum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim voluptatem quidem obcaecati minus corrupti quam veritatis numquam ducimus sit quis sequi suscipit ullam vitae labore nisi, voluptate cupiditate aperiam accusantium!</p>
                 <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Et, totam quos! Tenetur eaque quas vel repellendus pariatur animi quia inventore illum, porro minima labore eius, ex a, amet impedit? Reiciendis, nam officiis! Repellendus maiores laborum rem impedit velit?</p>
-                <p>Omnis repellat nam beatae et? Aut obcaecati, laborum, aliquam placeat earum reiciendis nihil molestiae perferendis molestias cum veritatis odit officiis inventore! Eaque eius commodi omnis officiis dicta illum quae possimus.</p>
+                <p>Quasi tempore reprehenderit voluptas repellat at, non tenetur neque rem quia reiciendis cumque, ducimus architecto, quibusdam blanditiis et? Sit ducimus explicabo nobis, consequatur impedit tempore qui quod eius error voluptas!</p>
+                <p>Architecto impedit minima perspiciatis ex, quisquam culpa sint earum doloremque quos vel? Odit cumque ad explicabo veritatis incidunt consectetur veniam, iste officiis placeat cum, quos tenetur dolores eum, eligendi obcaecati.</p>
                 <ul>
                     <li>Lorem, ipsum dolor.</li>
-                    <li>Iste, neque sequi?</li>
-                    <li>Blanditiis, fuga sapiente.</li>
-                    <li>Suscipit, quia commodi.</li>
+                    <li>Quod, ipsum incidunt!</li>
+                    <li>Modi, facere tenetur.</li>
+                    <li>Fuga, repellendus cum!</li>
                 </ul>
-                <p>Rerum sequi, voluptatibus illo consequatur voluptate rem ab, ipsam maiores sapiente id libero commodi quas cumque ratione impedit officia praesentium doloremque ut error? Magni quasi saepe facilis? Nisi, nobis commodi?</p>
-                <p>Ipsum ratione dolorem modi libero dolorum quas porro nam minus commodi quidem nemo incidunt harum nesciunt natus, temporibus corrupti aspernatur illo? Aperiam distinctio iusto impedit vel ad, repudiandae ipsam? Vero!</p>
+                <p>Nisi, recusandae facere. Saepe, tempora unde perspiciatis ea corrupti facilis aliquid minus vitae. Soluta in culpa sunt cum asperiores iusto, sit doloremque vero laudantium veniam voluptate reiciendis natus, voluptas quidem.</p>
+                <p>Minus ab optio corrupti consequuntur expedita aliquid minima, hic commodi voluptatibus dicta iure earum perspiciatis aspernatur soluta excepturi inventore. Laborum, adipisci tempore aperiam quae iusto dolor nesciunt dolore saepe quos?</p>
             </main>
-        </section><!-- pageContent end -->
-
+        </section><!--Ici se termine le #pageContent-->
         <footer id="mainFooter">
-            <p>&copy; Copyright Mathieu Barthès 2022</p>
-        </footer><!-- mainFooter end -->
+            <p>&copy; Copyright Damien Bruyndonckx - 2019</p>
+        </footer><!--Ici se termine le #mainFooter-->
     </body>
 </html>
