--- a/NoirEtBlanc/blog.html
+++ b/NoirEtBlanc/blog.html
@@ -2,62 +2,57 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Le monde en noir &amp; blanc</title>
+        <title>Le monde en noir &amp; blanc - Blog</title>
         <link rel="stylesheet" href="/css/nb.css" />
     </head>
-
     <body>
         <header id="mainHeader">
-            <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
+            <img src="/images/layout/nb_logo.svg" alt="Logo N&B" id="logoImg" />
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
-                <h1 class="accessibility">Menu principal</h1>
-                <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
+                <h1>Menu principal</h1>
+                <p><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
                 <ul>
                     <li><a href="index.html" title="Vers la page d'accueil du site 'Le monde en noir et blanc'">Accueil</a></li>
                     <li><a href="galleries.html" title="Vers les galeries photo de ce site">Galeries</a></li>
                     <li><a href="contact.html" title="Vers la page de contact de ce site">Contact</a></li>
-                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">&Agrave; propos</a></li>
+                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">À propos</a></li>
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
-        </header><!-- mainHeader end -->
-
-        <section id="pageContent" class="twoCols blogList blog">
+            <button id="menuToggle"><img src="/images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu" /></button>
+        </header><!--Ici se termine le #mainHeader-->
+        <section id="pageContent">
             <main id="leftCol">
                 <article>
                     <header>
                         <h1>Lorem ipsum dolor sit.</h1>
-                        <p><strong>JJ - MM - AAAA</strong> | Mathieu Barthès | 3 commentaires</p>
+                        <p><strong>JJ - MM - AAAA</strong> | Damien Bruyndonckx | 3 commentaires</p>
                     </header>
-                    <p>
-                        <img src="/images/image-1.jpg" alt="Image d'illustration de l'article" />
-                        Lorem ipsum, dolor sit amet <a href="singleBlog.html#ch2">consectetur adipisicing</a> elit. Alias eligendi laudantium ipsam non, aspernatur distinctio, ipsum architecto earum animi quisquam veritatis nulla dolore officia reiciendis ratione sint mollitia provident ipsa cum soluta voluptate fugit! Atque obcaecati impedit magnam eaque voluptates.
-                    </p>
+                    <p><img src="/images/image-1.jpg" alt="Image d'illustration de l'article" />Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugit officia eveniet delectus nemo recusandae quos sequi atque id ipsa. Similique ad <a href="singleBlog.html#ch1">consequuntur odio, architecto</a> asperiores nulla qui quibusdam impedit quas laborum soluta eligendi corrupti amet possimus tempore fuga facere voluptate dolor expedita, iste cum ipsum veniam accusamus. Id, velit!</p>
                     <p><a href="singleBlog.html">Lire la suite</a></p>
-                </article><!-- fin du premier article -->
+                </article><!--Fin du premier article-->
                 <article>
                     <header>
                         <h1>Lorem ipsum dolor sit.</h1>
-                        <p><strong>JJ - MM - AAAA</strong> | Mathieu Barthès | 3 commentaires</p>
+                        <p><strong>JJ - MM - AAAA</strong> | Damien Bruyndonckx | 3 commentaires</p>
                     </header>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias eligendi laudantium ipsam non, aspernatur distinctio, ipsum architecto earum animi quisquam veritatis nulla dolore officia reiciendis ratione sint mollitia provident ipsa cum soluta voluptate fugit! Atque obcaecati impedit magnam eaque voluptates.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugit officia eveniet delectus nemo recusandae quos sequi atque id ipsa. Similique ad consequuntur odio, architecto asperiores nulla qui quibusdam impedit quas laborum soluta eligendi corrupti amet possimus tempore fuga facere voluptate dolor expedita, iste cum ipsum veniam accusamus. Id, velit!</p>
                     <p><a href="singleBlog.html">Lire la suite</a></p>
-                </article><!-- fin du 2è article -->
+                </article><!--Fin du deuxième article-->
                 <article>
                     <header>
                         <h1>Lorem ipsum dolor sit.</h1>
-                        <p><strong>JJ - MM - AAAA</strong> | Mathieu Barthès | 3 commentaires</p>
+                        <p><strong>JJ - MM - AAAA</strong> | Damien Bruyndonckx | 3 commentaires</p>
                     </header>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias eligendi laudantium ipsam non, aspernatur distinctio, ipsum architecto earum animi quisquam veritatis nulla dolore officia reiciendis ratione sint mollitia provident ipsa cum soluta voluptate fugit! Atque obcaecati impedit magnam eaque voluptates.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugit officia eveniet delectus nemo recusandae quos sequi atque id ipsa. Similique ad consequuntur odio, architecto asperiores nulla qui quibusdam impedit quas laborum soluta eligendi corrupti amet possimus tempore fuga facere voluptate dolor expedita, iste cum ipsum veniam accusamus. Id, velit!</p>
                     <p><a href="singleBlog.html">Lire la suite</a></p>
-                </article><!-- fin du 3è article -->
-            </main><!-- leftCol end -->
+                </article><!--Fin du troisième article-->
+            </main><!--Ici se termine le #leftCol-->
             <aside id="rightCol">
                 <section id="blogSearch">
                     <h1><label for="search">Rechercher</label></h1>
-                    <input type="search" name="search" id="search">
+                    <input type="search" name="search" id="search" />
                 </section>
                 <section id="categories">
                     <h1>Catégories</h1>
@@ -66,7 +61,7 @@
                         <li><a href="#">Lightroom <span>2</span></a></li>
                         <li><a href="#">Techniques <span>4</span></a></li>
                         <li><a href="#">Voyages <span>15</span></a></li>
-                    </ul>>
+                    </ul>
                 </section>
                 <section id="blogArchives">
                     <h1>Archives</h1>
@@ -83,7 +78,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h2><a href="#">2019 <span>11</span></a></h2>
+                        <h2><a href="#">2019<span>11</span></a></h2>
                         <ul>
                             <li><a href="#">Janvier 2019 <span>3</span></a></li>
                             <li><a href="#">Février 2019 <span>1</span></a></li>
@@ -93,11 +88,10 @@
                         </ul>
                     </div>
                 </section>
-            </aside><!-- rightCol end -->
-        </section><!-- pageContent end -->
-
+            </aside><!--Ici se termine le #rightCol-->
+        </section><!--Ici se termine le #pageContent-->
         <footer id="mainFooter">
-            <p>&copy; Copyright Mathieu Barthès 2022</p>
-        </footer><!-- mainFooter end -->
+            <p>&copy; Copyright Damien Bruyndonckx - 2019</p>
+        </footer><!--Ici se termine le #mainFooter-->
     </body>
 </html>
