--- a/NoirEtBlanc/contact.html
+++ b/NoirEtBlanc/contact.html
@@ -2,13 +2,13 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Le monde en noir &amp; blanc</title>
+        <title>Le monde en noir &amp; blanc - Contactez nous</title>
         <link rel="stylesheet" href="/css/normalize.css" />
         <link rel="stylesheet" href="/css/nb.css" />
     </head>
     <body>
         <header id="mainHeader">
-            <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
+            <img src="/images/layout/nb_logo.svg" alt="Logo N&B" id="logoImg" />
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
                 <h1 class="accessibility">Menu principal</h1>
@@ -17,14 +17,13 @@
                     <li><a href="index.html" title="Vers la page d'accueil du site 'Le monde en noir et blanc'">Accueil</a></li>
                     <li><a href="galleries.html" title="Vers les galeries photo de ce site">Galeries</a></li>
                     <li><a href="contact.html" title="Vers la page de contact de ce site">Contact</a></li>
-                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">&Agrave; propos</a></li>
+                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">À propos</a></li>
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
-        </header><!-- mainHeader end -->
-
-        <section id="pageContent" class="oneCol contact">
+            <button id="menuToggle"><img src="/images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu" /></button>
+        </header><!--Ici se termine le #mainHeader-->
+        <section id="pageContent">
             <main>
                 <h1>Contactez-nous</h1>
                 <p>Merci de compléter le formulaire suivant pour nous contacter. Tous les champs de ce formulaire sont requis.</p>
@@ -32,10 +31,10 @@
                     <div>
                         <div>
                             <label for="fName">Prénom</label>
-                            <input type="text" name="fName" id="fName" required autofocus />
+                            <input name="fName" id="fName" required autofocus />
                         </div>
                         <div>
-                            <label for="lName">Nom</label>
+                            <label for="lName">Nom de famille</label>
                             <input type="text" name="lName" id="lName" required />
                         </div>
                         <div>
@@ -52,10 +51,9 @@
                     <button type="submit">Envoyer</button>
                 </form>
             </main>
-        </section>
-
+        </section><!--Ici se termine le #pageContent-->
         <footer id="mainFooter">
-            <p>&copy; Copyright Mathieu Barthès 2022</p>
-        </footer><!-- mainFooter end -->
+            <p>&copy; Copyright Damien Bruyndonckx - 2019</p>
+        </footer><!--Ici se termine le #mainFooter-->
     </body>
 </html>
