--- a/NoirEtBlanc/galleries.html
+++ b/NoirEtBlanc/galleries.html
@@ -2,28 +2,26 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Le monde en noir &amp; blanc</title>
+        <title>Le monde en noir &amp; blanc - Galeries</title>
     </head>
-
     <body>
         <header id="mainHeader">
-            <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
+            <img src="/images/layout/nb_logo.svg" alt="Logo N&B" id="logoImg" />
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
-                <h1 class="accessibility">Menu principal</h1>
-                <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
+                <h1>Menu principal</h1>
+                <p><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
                 <ul>
                     <li><a href="index.html" title="Vers la page d'accueil du site 'Le monde en noir et blanc'">Accueil</a></li>
                     <li><a href="galleries.html" title="Vers les galeries photo de ce site">Galeries</a></li>
                     <li><a href="contact.html" title="Vers la page de contact de ce site">Contact</a></li>
-                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">&Agrave; propos</a></li>
+                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">À propos</a></li>
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
-        </header><!-- mainHeader end -->
-
-        <section id="pageContent" class="galleries">
+            <button id="menuToggle"><img src="/images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu" /></button>
+        </header><!--Ici se termine le #mainHeader-->
+        <section id="pageContent">
             <main>
                 <h1>Galeries</h1>
                 <ul>
@@ -31,21 +29,21 @@
                         <a href="bretagne2019.html">
                             <h2>Bretagne 2019</h2>
                             <img src="/images/image-1.jpg" alt="Bretagne 2019">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda magni commodi unde voluptatibus illum deserunt alias, praesentium animi beatae dolores similique voluptatum tempora maiores minima iste delectus, quisquam soluta incidunt.</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut porro cupiditate fuga! Laudantium sapiente minima dolores modi inventore consectetur sint eos distinctio mollitia unde, nostrum quas animi ipsam id dolorum!</p>
                         </a>
                     </li>
                     <li>
                         <a href="sacramento2017.html">
                             <h2>Sacramento 2017</h2>
-                            <p><img src="/images/image-8.jpg" alt="Sacramento 2017">Repellat in vel iusto, corrupti eligendi molestiae illo quibusdam ratione culpa facere voluptatibus sint nihil accusamus expedita quasi rerum vitae ab? Saepe est molestiae magni similique harum possimus deserunt odio.</p>
+                            <img src="/images/image-8.jpg" alt="Sacramento 2017">
+                            <p>Temporibus accusamus labore facere. Neque mollitia quod quae ipsum repellat, recusandae ut culpa fugiat sit eum ea eveniet aperiam provident officiis maiores perspiciatis, perferendis quaerat voluptate voluptates deserunt temporibus? Fugiat?</p>
                         </a>
                     </li>
                 </ul>
             </main>
-        </section><!-- pageContent end -->
-
+        </section><!--Ici se termine le #pageContent-->
         <footer id="mainFooter">
-            <p>&copy; Copyright Mathieu Barthès 2022</p>
-        </footer><!-- mainFooter end -->
+            <p>&copy; Copyright Damien Bruyndonckx - 2019</p>
+        </footer><!--Ici se termine le #mainFooter-->
     </body>
 </html>
