--- a/NoirEtBlanc/index.html
+++ b/NoirEtBlanc/index.html
@@ -2,40 +2,34 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="Une description avec un max de mots clé, sans dépasser 160 caractères." />
         <title>Le monde en noir &amp; blanc - Page d'accueil</title>
     </head>
-
     <body>
         <header id="mainHeader">
-            <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
+            <img src="/images/layout/nb_logo.svg" alt="Logo N&B" id="logoImg" />
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
-                <h1 class="accessibility">Menu principal</h1>
-                <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
+                <h1>Menu principal</h1>
+                <p><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
                 <ul>
                     <li><a href="index.html" title="Vers la page d'accueil du site 'Le monde en noir et blanc'">Accueil</a></li>
                     <li><a href="galleries.html" title="Vers les galeries photo de ce site">Galeries</a></li>
                     <li><a href="contact.html" title="Vers la page de contact de ce site">Contact</a></li>
-                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">&Agrave; propos</a></li>
+                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">À propos</a></li>
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
-        </header><!-- mainHeader end -->
-
-        <section id="pageContent" class="oneCol home">
-            <main>
-                <div id="pictInfo">
-                    <h1>Plage de Bretagne</h1>
-                    <p>Damien Bruyndonckx</p>
-                    <p>100 ISO - 18 mm - f/22 - 302 sec</p>
-                </div>
-            </main>
-        </section><!-- pageContent end -->
-
+            <button id="menuToggle"><img src="/images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu" /></button>
+        </header><!--Ici se termine le #mainHeader-->
+        <main id="pageContent">
+            <div id="pictInfo">
+                <h1>Plage de Bretagne</h1>
+                <p>Damien Bruyndonckx</p>
+                <p>100 ISO - 18 mm - f/22 - 302 sec</p>
+            </div>
+        </main><!--Ici se termine le #pageContent-->
         <footer id="mainFooter">
-            <p>&copy; Copyright Mathieu Barthès 2022</p>
-        </footer><!-- mainFooter end -->
+            <p>&copy; Copyright Damien Bruyndonckx - 2019</p>
+        </footer><!--Ici se termine le #mainFooter-->
     </body>
 </html>
